--- a/src/main/Resources/application.properties
+++ b/src/main/Resources/application.properties
@@ -1,11 +1,11 @@
 server.port=8085
 
 spring.datasource.url=jdbc:postgresql://localhost:5432/postgres?currentSchema=nowy_schemat
-spring.datasource.username=user
-spring.datasource.password=user
+spring.datasource.username=postgres
+spring.datasource.password=Natalia2012
 
 spring.jpa.hibernate.ddl-auto=update
 
-spring.jpa.show-sql=true
-spring.jpa.database=POSTGRESQL
-spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+#spring.jpa.show-sql=true
+#spring.jpa.database=POSTGRESQL
+#spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
