--- a/pom.xml
+++ b/pom.xml
@@ -31,7 +31,17 @@
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-jdbc</artifactId>
     </dependency>
-<!--    <dependency>-->
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-web</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-security</artifactId>
+      <version>2.2.4.RELEASE</version>
+    </dependency>
+
+    <!--    <dependency>-->
 <!--      <groupId>org.springframework.boot</groupId>-->
 <!--      <artifactId>spring-boot-starter-mail</artifactId>-->
 <!--    </dependency>-->
@@ -43,10 +53,6 @@
 <!--      <groupId>org.springframework.boot</groupId>-->
 <!--      <artifactId>spring-boot-starter-thymeleaf</artifactId>-->
 <!--    </dependency>-->
-    <dependency>
-      <groupId>org.springframework.boot</groupId>
-      <artifactId>spring-boot-starter-web</artifactId>
-    </dependency>
 <!--    <dependency>-->
 <!--      <groupId>org.flywaydb</groupId>-->
 <!--      <artifactId>flyway-core</artifactId>-->
@@ -84,6 +90,12 @@
         </exclusion>
       </exclusions>
     </dependency>
+
+<!--    <dependency>-->
+<!--      <groupId>org.springframework.boot</groupId>-->
+<!--      <artifactId>spring-boot-starter-security</artifactId>-->
+<!--      <version>2.2.4.RELEASE</version>-->
+<!--    </dependency>-->
 <!--    <dependency>-->
 <!--      <groupId>org.springframework.security</groupId>-->
 <!--      <artifactId>spring-security-test</artifactId>-->
