--- a/pom.xml
+++ b/pom.xml
@@ -41,6 +41,16 @@
       <version>2.2.4.RELEASE</version>
     </dependency>
 
+    <dependency>
+      <groupId>org.springdoc</groupId>
+      <artifactId>springdoc-openapi-ui</artifactId>
+      <version>1.1.44</version>
+    </dependency>
+
+
+
+
+
     <!--    <dependency>-->
 <!--      <groupId>org.springframework.boot</groupId>-->
 <!--      <artifactId>spring-boot-starter-mail</artifactId>-->
