--- a/src/main/Resources/application.properties
+++ b/src/main/Resources/application.properties
@@ -12,4 +12,4 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialec
 
 # Hibernate ddl auto (create, create-drop, validate, update)
 spring.jpa.hibernate.ddl-auto = create-drop
-# spring.datasource.initialization-mode=always
+spring.datasource.initialization-mode=always
